--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2021"
 version = "0.1.0"
 
 [dependencies]
-defmt = "0.3.0"
-defmt-rtt = "0.3.0"
+defmt = "0.3.2"
+defmt-rtt = "0.4.0"
 panic-probe = { version = "0.3.0", features = ["print-defmt"] }
 
-cortex-m = "0.7.3"
-cortex-m-rt = "0.7.0"
+cortex-m = {version = "^0.7.7", features = ["critical-section-single-core"]}
+cortex-m-rt = "0.7.2"
 
 # Change this import as required for your MCU.
-stm32-hal2 = { version = "^1.4.5", features = ["l4x3", "l4rt"]}
-# stm32-hal2 = { version = "^1.3.3", features = ["h743v", "h7rt"]}
+stm32-hal2 = { version = "^1.5.5", features = ["l4x3", "l4rt"]}
+# stm32-hal2 = { version = "^1.5.5", features = ["h743v", "h7rt"]}
 
 # cargo build/run
 [profile.dev]
